fix markYoungRoot