@@ -91,7 +91,9 @@
 #     sh \
 #         /Users/zeedh/slowcoders/jdk-rtgc/test/langtools/tools/javac/Paths/Diagnostics.sh
 
-pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/scratch/0 && \
+
+
+pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/scratch/0 && \
 HOME=/Users/zeedh \
 JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
 LANG=en_US.UTF-8 \
@@ -99,30 +101,118 @@ LC_ALL=C \
 PATH=/bin:/usr/bin:/usr/sbin \
 TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
     /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/javac \
-        -J-Xmx768m \
         -J-XX:MaxRAMPercentage=6.25 \
-        -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/tmp \
-        -J-ea \
-        -J-esa \
-        -J-Djava.library.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/jdk/jtreg/native \
-        -J-Dtest.vm.opts='-Xmx768m -XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/tmp -ea -esa' \
-        -J-Dtest.tool.vm.opts='-J-Xmx768m -J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/tmp -J-ea -J-esa' \
+        -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp \
+        -J-Djava.library.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+        -J-Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp' \
+        -J-Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp' \
         -J-Dtest.compiler.opts= \
         -J-Dtest.java.opts= \
         -J-Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
         -J-Dcompile.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
         -J-Dtest.timeout.factor=4.0 \
-        -J-Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/jdk/jtreg/native \
-        -J-Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk \
-        -J-Dtest.name=java/lang/invoke/LFCaching/LFSingleThreadCachingTest.java \
-        -J-Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.java \
-        -J-Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/LFCaching \
-        -J-Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/LFCaching:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/lib/testlibrary:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/common:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
-        -J-Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.d \
-        -J-Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/lib/testlibrary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/common:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/test/lib \
-        -J-Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/LFCaching:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/lib/testlibrary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/common:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/test/lib \
-        -J-Dtest.modules='java.base/java.lang.ref:open java.base/java.lang.invoke:open java.management' \
-        --add-modules java.base,java.management \
-        -d /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.d \
-        -sourcepath /Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/LFCaching:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/lib/testlibrary:/Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/common:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
-        -classpath /Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/LFCaching:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/lib/testlibrary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/java/lang/invoke/common:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_jdk_java_lang_invoke_LFCaching_LFSingleThreadCachingTest_java/classes/0/test/lib /Users/zeedh/slowcoders/jdk-rtgc/test/jdk/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.java
+        -J-Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+        -J-Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg \
+        -J-Dtest.name=runtime/Dictionary/ProtectionDomainCacheTest.java \
+        -J-Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary/ProtectionDomainCacheTest.java \
+        -J-Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary \
+        -J-Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -J-Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d \
+        -J-Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib \
+        -J-Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib \
+        -J-Dtest.modules=java.base/jdk.internal.misc \
+        --add-modules java.base \
+        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED \
+        -d /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib \
+        -sourcepath /Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -classpath /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib /Users/zeedh/slowcoders/jdk-rtgc/test/lib/jdk/test/lib/Utils.java /Users/zeedh/slowcoders/jdk-rtgc/test/lib/jdk/test/lib/util/JarUtils.java
+
+pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/scratch/0 && \
+HOME=/Users/zeedh \
+JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
+LANG=en_US.UTF-8 \
+LC_ALL=C \
+PATH=/bin:/usr/bin:/usr/sbin \
+TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
+    /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/javac \
+        -J-XX:MaxRAMPercentage=6.25 \
+        -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp \
+        -J-Djava.library.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+        -J-Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp' \
+        -J-Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp' \
+        -J-Dtest.compiler.opts= \
+        -J-Dtest.java.opts= \
+        -J-Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+        -J-Dcompile.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+        -J-Dtest.timeout.factor=4.0 \
+        -J-Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+        -J-Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg \
+        -J-Dtest.name=runtime/Dictionary/ProtectionDomainCacheTest.java \
+        -J-Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary/ProtectionDomainCacheTest.java \
+        -J-Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary \
+        -J-Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -J-Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d \
+        -J-Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib \
+        -J-Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib \
+        -J-Dtest.modules=java.base/jdk.internal.misc \
+        --add-modules java.base \
+        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED \
+        -d /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d \
+        -sourcepath /Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -classpath /Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib /Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary/ClassForName.java /Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary/ProtectionDomainCacheTest.java
+        
+pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/scratch/0 && \
+HOME=/Users/zeedh \
+JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
+LANG=en_US.UTF-8 \
+LC_ALL=C \
+PATH=/bin:/usr/bin:/usr/sbin \
+TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
+    /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/java \
+        -Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp' \
+        -Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/tmp' \
+        -Dtest.compiler.opts= \
+        -Dtest.java.opts= \
+        -Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+        -Dcompile.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+        -Dtest.timeout.factor=4.0 \
+        -Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+        -Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg \
+        -Dtest.name=runtime/Dictionary/ProtectionDomainCacheTest.java \
+        -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary/ProtectionDomainCacheTest.java \
+        -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary \
+        -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+        -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d \
+        -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib \
+        -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib \
+        -Dtest.modules=java.base/jdk.internal.misc \
+        -classpath /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/runtime/Dictionary/ProtectionDomainCacheTest.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/runtime/Dictionary:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_runtime_Dictionary_ProtectionDomainCacheTest_java/classes/0/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
+        ProtectionDomainCacheTest
+
+# pushd /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/scratch/0 && \
+# HOME=/Users/zeedh \
+# JDK8_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home \
+# LANG=en_US.UTF-8 \
+# LC_ALL=C \
+# PATH=/bin:/usr/bin:/usr/sbin \
+# TEST_IMAGE_DIR=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test \
+#     /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk/bin/java \
+#         -Dtest.vm.opts='-XX:MaxRAMPercentage=6.25 -Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/tmp' \
+#         -Dtest.tool.vm.opts='-J-XX:MaxRAMPercentage=6.25 -J-Djava.io.tmpdir=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/tmp' \
+#         -Dtest.compiler.opts= \
+#         -Dtest.java.opts= \
+#         -Dtest.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+#         -Dcompile.jdk=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/jdk \
+#         -Dtest.timeout.factor=4.0 \
+#         -Dtest.nativepath=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/images/test/hotspot/jtreg/native \
+#         -Dtest.root=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg \
+#         -Dtest.name=gc/arguments/TestSurvivorRatioFlag.java \
+#         -Dtest.file=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc/arguments/TestSurvivorRatioFlag.java \
+#         -Dtest.src=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc/arguments \
+#         -Dtest.src.path=/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc/arguments:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg:/Users/zeedh/slowcoders/jdk-rtgc/test/lib \
+#         -Dtest.classes=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0/gc/arguments/TestSurvivorRatioFlag.d \
+#         -Dtest.class.path=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0/gc/arguments/TestSurvivorRatioFlag.d:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0/test/lib \
+#         -Dtest.class.path.prefix=/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0/gc/arguments/TestSurvivorRatioFlag.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc/arguments:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0/test/lib \
+#         -Dtest.modules='java.base/jdk.internal.misc java.management' \
+#         -classpath /Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0/gc/arguments/TestSurvivorRatioFlag.d:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg/gc/arguments:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0:/Users/zeedh/slowcoders/jdk-rtgc/test/hotspot/jtreg:/Users/zeedh/slowcoders/jdk-rtgc/build/macosx-x86_64-client-fastdebug/test-support/jtreg_test_hotspot_jtreg_gc_arguments_TestSurvivorRatioFlag_java/classes/0/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/test/lib:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/javatest.jar:/Users/zeedh/slowcoders/jdk-rtgc/jtreg-6.1/lib/jtreg.jar \
+#         gc.arguments.TestSurvivorRatioFlag
